fix bug on chrome not showing audio play button

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ body {
 #waveform-container {
   margin: 0px 12px;
   width: auto;
+  height: auto;
 }
 
 #zoomview-container,
@@ -47,8 +48,8 @@ audio {
 }
 
 #media {
+  display: flex;
   width: 100%;
-  height: 100%;
 }
 
 #poses {
